# refactoringTechniquesSzkolenie

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  main.cpp
code/includes/: Actions.hpp  Board.hpp  BoardIterator.hpp  Dice.hpp  Events.hpp  IAction.hpp  ID.hpp  IEvent.hpp  IPiece.hpp  IPlayer.hpp  MonopolyGame.hpp  Piece.hpp  Player.hpp  Square.hpp  dice.hpp
code/source/: Board.cpp  BoardIterator.cpp  Dice.cpp  ID.cpp  IPiece.cpp  IPlayer.cpp  MonopolyGame.cpp  Piece.cpp  Player.cpp  Square.cpp  dice.cpp
